// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prefixAttributesCreator Returns prefixed object with custom values 1`] = `
Object {
  "button-padding-bottom-general": Object {
    "default": 30,
    "type": "number",
  },
  "button-padding-bottom-l": Object {
    "type": "number",
  },
  "button-padding-bottom-m": Object {
    "type": "number",
  },
  "button-padding-bottom-s": Object {
    "type": "number",
  },
  "button-padding-bottom-xl": Object {
    "type": "number",
  },
  "button-padding-bottom-xs": Object {
    "type": "number",
  },
  "button-padding-bottom-xxl": Object {
    "type": "number",
  },
  "button-padding-left-general": Object {
    "type": "number",
  },
  "button-padding-left-l": Object {
    "type": "number",
  },
  "button-padding-left-m": Object {
    "type": "number",
  },
  "button-padding-left-s": Object {
    "type": "number",
  },
  "button-padding-left-xl": Object {
    "type": "number",
  },
  "button-padding-left-xs": Object {
    "type": "number",
  },
  "button-padding-left-xxl": Object {
    "type": "number",
  },
  "button-padding-right-general": Object {
    "type": "number",
  },
  "button-padding-right-l": Object {
    "type": "number",
  },
  "button-padding-right-m": Object {
    "type": "number",
  },
  "button-padding-right-s": Object {
    "type": "number",
  },
  "button-padding-right-xl": Object {
    "type": "number",
  },
  "button-padding-right-xs": Object {
    "type": "number",
  },
  "button-padding-right-xxl": Object {
    "type": "number",
  },
  "button-padding-sync-general": Object {
    "default": "all",
    "type": "string",
  },
  "button-padding-sync-l": Object {
    "type": "string",
  },
  "button-padding-sync-m": Object {
    "type": "string",
  },
  "button-padding-sync-s": Object {
    "type": "string",
  },
  "button-padding-sync-xl": Object {
    "type": "string",
  },
  "button-padding-sync-xs": Object {
    "type": "string",
  },
  "button-padding-sync-xxl": Object {
    "type": "string",
  },
  "button-padding-top-general": Object {
    "type": "number",
  },
  "button-padding-top-l": Object {
    "type": "number",
  },
  "button-padding-top-m": Object {
    "type": "number",
  },
  "button-padding-top-s": Object {
    "type": "number",
  },
  "button-padding-top-xl": Object {
    "type": "number",
  },
  "button-padding-top-xs": Object {
    "type": "number",
  },
  "button-padding-top-xxl": Object {
    "type": "number",
  },
  "button-padding-unit-general": Object {
    "default": "px",
    "type": "string",
  },
  "button-padding-unit-l": Object {
    "type": "string",
  },
  "button-padding-unit-m": Object {
    "type": "string",
  },
  "button-padding-unit-s": Object {
    "type": "string",
  },
  "button-padding-unit-xl": Object {
    "type": "string",
  },
  "button-padding-unit-xs": Object {
    "type": "string",
  },
  "button-padding-unit-xxl": Object {
    "type": "string",
  },
}
`;

exports[`prefixAttributesCreator Returns prefixed object with default values 1`] = `
Object {
  "button-border-bottom-width-general": Object {
    "type": "number",
  },
  "button-border-bottom-width-l": Object {
    "type": "number",
  },
  "button-border-bottom-width-m": Object {
    "type": "number",
  },
  "button-border-bottom-width-s": Object {
    "type": "number",
  },
  "button-border-bottom-width-xl": Object {
    "type": "number",
  },
  "button-border-bottom-width-xs": Object {
    "type": "number",
  },
  "button-border-bottom-width-xxl": Object {
    "type": "number",
  },
  "button-border-left-width-general": Object {
    "type": "number",
  },
  "button-border-left-width-l": Object {
    "type": "number",
  },
  "button-border-left-width-m": Object {
    "type": "number",
  },
  "button-border-left-width-s": Object {
    "type": "number",
  },
  "button-border-left-width-xl": Object {
    "type": "number",
  },
  "button-border-left-width-xs": Object {
    "type": "number",
  },
  "button-border-left-width-xxl": Object {
    "type": "number",
  },
  "button-border-right-width-general": Object {
    "type": "number",
  },
  "button-border-right-width-l": Object {
    "type": "number",
  },
  "button-border-right-width-m": Object {
    "type": "number",
  },
  "button-border-right-width-s": Object {
    "type": "number",
  },
  "button-border-right-width-xl": Object {
    "type": "number",
  },
  "button-border-right-width-xs": Object {
    "type": "number",
  },
  "button-border-right-width-xxl": Object {
    "type": "number",
  },
  "button-border-sync-width-general": Object {
    "default": "all",
    "type": "string",
  },
  "button-border-sync-width-l": Object {
    "type": "string",
  },
  "button-border-sync-width-m": Object {
    "type": "string",
  },
  "button-border-sync-width-s": Object {
    "type": "string",
  },
  "button-border-sync-width-xl": Object {
    "type": "string",
  },
  "button-border-sync-width-xs": Object {
    "type": "string",
  },
  "button-border-sync-width-xxl": Object {
    "type": "string",
  },
  "button-border-top-width-general": Object {
    "type": "number",
  },
  "button-border-top-width-l": Object {
    "type": "number",
  },
  "button-border-top-width-m": Object {
    "type": "number",
  },
  "button-border-top-width-s": Object {
    "type": "number",
  },
  "button-border-top-width-xl": Object {
    "type": "number",
  },
  "button-border-top-width-xs": Object {
    "type": "number",
  },
  "button-border-top-width-xxl": Object {
    "type": "number",
  },
  "button-border-unit-width-general": Object {
    "default": "px",
    "type": "string",
  },
  "button-border-unit-width-l": Object {
    "type": "string",
  },
  "button-border-unit-width-m": Object {
    "type": "string",
  },
  "button-border-unit-width-s": Object {
    "type": "string",
  },
  "button-border-unit-width-xl": Object {
    "type": "string",
  },
  "button-border-unit-width-xs": Object {
    "type": "string",
  },
  "button-border-unit-width-xxl": Object {
    "type": "string",
  },
  "button-box-shadow-blur-general-hover": Object {
    "type": "number",
  },
  "button-box-shadow-blur-l-hover": Object {
    "type": "number",
  },
  "button-box-shadow-blur-m-hover": Object {
    "type": "number",
  },
  "button-box-shadow-blur-s-hover": Object {
    "type": "number",
  },
  "button-box-shadow-blur-xl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-blur-xs-hover": Object {
    "type": "number",
  },
  "button-box-shadow-blur-xxl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-color-general-hover": Object {
    "type": "string",
  },
  "button-box-shadow-color-l-hover": Object {
    "type": "string",
  },
  "button-box-shadow-color-m-hover": Object {
    "type": "string",
  },
  "button-box-shadow-color-s-hover": Object {
    "type": "string",
  },
  "button-box-shadow-color-xl-hover": Object {
    "type": "string",
  },
  "button-box-shadow-color-xs-hover": Object {
    "type": "string",
  },
  "button-box-shadow-color-xxl-hover": Object {
    "type": "string",
  },
  "button-box-shadow-horizontal-general-hover": Object {
    "type": "number",
  },
  "button-box-shadow-horizontal-l-hover": Object {
    "type": "number",
  },
  "button-box-shadow-horizontal-m-hover": Object {
    "type": "number",
  },
  "button-box-shadow-horizontal-s-hover": Object {
    "type": "number",
  },
  "button-box-shadow-horizontal-xl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-horizontal-xs-hover": Object {
    "type": "number",
  },
  "button-box-shadow-horizontal-xxl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-color-general-hover": Object {
    "default": 6,
    "type": "number",
  },
  "button-box-shadow-palette-color-l-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-color-m-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-color-s-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-status-general-hover": Object {
    "default": true,
    "type": "boolean",
  },
  "button-box-shadow-palette-status-l-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-m-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-s-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-xl-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-xs-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-xxl-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-color-xl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-color-xs-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-color-xxl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-opacity-general-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-opacity-l-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-opacity-m-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-opacity-s-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-opacity-xl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-opacity-xs-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-opacity-xxl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-status-general-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-l-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-m-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-s-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-xl-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-xs-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-xxl-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-spread-general-hover": Object {
    "type": "number",
  },
  "button-box-shadow-spread-l-hover": Object {
    "type": "number",
  },
  "button-box-shadow-spread-m-hover": Object {
    "type": "number",
  },
  "button-box-shadow-spread-s-hover": Object {
    "type": "number",
  },
  "button-box-shadow-spread-xl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-spread-xs-hover": Object {
    "type": "number",
  },
  "button-box-shadow-spread-xxl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-status-hover": Object {
    "default": false,
    "type": "boolean",
  },
  "button-box-shadow-vertical-general-hover": Object {
    "type": "number",
  },
  "button-box-shadow-vertical-l-hover": Object {
    "type": "number",
  },
  "button-box-shadow-vertical-m-hover": Object {
    "type": "number",
  },
  "button-box-shadow-vertical-s-hover": Object {
    "type": "number",
  },
  "button-box-shadow-vertical-xl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-vertical-xs-hover": Object {
    "type": "number",
  },
  "button-box-shadow-vertical-xxl-hover": Object {
    "type": "number",
  },
  "button-margin-bottom-general": Object {
    "type": "string",
  },
  "button-margin-bottom-l": Object {
    "type": "string",
  },
  "button-margin-bottom-m": Object {
    "type": "string",
  },
  "button-margin-bottom-s": Object {
    "type": "string",
  },
  "button-margin-bottom-xl": Object {
    "type": "string",
  },
  "button-margin-bottom-xs": Object {
    "type": "string",
  },
  "button-margin-bottom-xxl": Object {
    "type": "string",
  },
  "button-margin-left-general": Object {
    "type": "string",
  },
  "button-margin-left-l": Object {
    "type": "string",
  },
  "button-margin-left-m": Object {
    "type": "string",
  },
  "button-margin-left-s": Object {
    "type": "string",
  },
  "button-margin-left-xl": Object {
    "type": "string",
  },
  "button-margin-left-xs": Object {
    "type": "string",
  },
  "button-margin-left-xxl": Object {
    "type": "string",
  },
  "button-margin-right-general": Object {
    "type": "string",
  },
  "button-margin-right-l": Object {
    "type": "string",
  },
  "button-margin-right-m": Object {
    "type": "string",
  },
  "button-margin-right-s": Object {
    "type": "string",
  },
  "button-margin-right-xl": Object {
    "type": "string",
  },
  "button-margin-right-xs": Object {
    "type": "string",
  },
  "button-margin-right-xxl": Object {
    "type": "string",
  },
  "button-margin-sync-general": Object {
    "default": "all",
    "type": "string",
  },
  "button-margin-sync-l": Object {
    "type": "string",
  },
  "button-margin-sync-m": Object {
    "type": "string",
  },
  "button-margin-sync-s": Object {
    "type": "string",
  },
  "button-margin-sync-xl": Object {
    "type": "string",
  },
  "button-margin-sync-xs": Object {
    "type": "string",
  },
  "button-margin-sync-xxl": Object {
    "type": "string",
  },
  "button-margin-top-general": Object {
    "type": "string",
  },
  "button-margin-top-l": Object {
    "type": "string",
  },
  "button-margin-top-m": Object {
    "type": "string",
  },
  "button-margin-top-s": Object {
    "type": "string",
  },
  "button-margin-top-xl": Object {
    "type": "string",
  },
  "button-margin-top-xs": Object {
    "type": "string",
  },
  "button-margin-top-xxl": Object {
    "type": "string",
  },
  "button-margin-unit-general": Object {
    "default": "px",
    "type": "string",
  },
  "button-margin-unit-l": Object {
    "type": "string",
  },
  "button-margin-unit-m": Object {
    "type": "string",
  },
  "button-margin-unit-s": Object {
    "type": "string",
  },
  "button-margin-unit-xl": Object {
    "type": "string",
  },
  "button-margin-unit-xs": Object {
    "type": "string",
  },
  "button-margin-unit-xxl": Object {
    "type": "string",
  },
}
`;

exports[`prefixAttributesCreator Returns prefixed object with excluded values 1`] = `
Object {
  "button-padding-left-general": Object {
    "type": "number",
  },
  "button-padding-left-l": Object {
    "type": "number",
  },
  "button-padding-left-m": Object {
    "type": "number",
  },
  "button-padding-left-s": Object {
    "type": "number",
  },
  "button-padding-left-xl": Object {
    "type": "number",
  },
  "button-padding-left-xs": Object {
    "type": "number",
  },
  "button-padding-left-xxl": Object {
    "type": "number",
  },
  "button-padding-right-general": Object {
    "type": "number",
  },
  "button-padding-right-l": Object {
    "type": "number",
  },
  "button-padding-right-m": Object {
    "type": "number",
  },
  "button-padding-right-s": Object {
    "type": "number",
  },
  "button-padding-right-xl": Object {
    "type": "number",
  },
  "button-padding-right-xs": Object {
    "type": "number",
  },
  "button-padding-right-xxl": Object {
    "type": "number",
  },
  "button-padding-sync-general": Object {
    "default": "all",
    "type": "string",
  },
  "button-padding-sync-l": Object {
    "type": "string",
  },
  "button-padding-sync-m": Object {
    "type": "string",
  },
  "button-padding-sync-s": Object {
    "type": "string",
  },
  "button-padding-sync-xl": Object {
    "type": "string",
  },
  "button-padding-sync-xs": Object {
    "type": "string",
  },
  "button-padding-sync-xxl": Object {
    "type": "string",
  },
  "button-padding-top-general": Object {
    "type": "number",
  },
  "button-padding-top-l": Object {
    "type": "number",
  },
  "button-padding-top-m": Object {
    "type": "number",
  },
  "button-padding-top-s": Object {
    "type": "number",
  },
  "button-padding-top-xl": Object {
    "type": "number",
  },
  "button-padding-top-xs": Object {
    "type": "number",
  },
  "button-padding-top-xxl": Object {
    "type": "number",
  },
  "button-padding-unit-general": Object {
    "default": "px",
    "type": "string",
  },
  "button-padding-unit-l": Object {
    "type": "string",
  },
  "button-padding-unit-m": Object {
    "type": "string",
  },
  "button-padding-unit-s": Object {
    "type": "string",
  },
  "button-padding-unit-xl": Object {
    "type": "string",
  },
  "button-padding-unit-xs": Object {
    "type": "string",
  },
  "button-padding-unit-xxl": Object {
    "type": "string",
  },
}
`;
